--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ permalink: blog/:year/:month/:day/:title
 exclude: ["Makefile", "README.md"]
 
 url: "http://paulpritz.com"     # the base hostname & protocol for your site
-baseurl: "/home"                   # the subpath of your site, e.g. /blog
+baseurl: ""                   # the subpath of your site, e.g. /blog
 
 author:
     name: Paul Pritz
