--- a/_data/pubs.yml
+++ b/_data/pubs.yml
@@ -1,6 +1,7 @@
 - title:   "Fast-Fourier-Forecasting Resource Utilisation in Distributed Systems"
   author:  "Paul J. Pritz, Daniel Perez, Kin K. Leung"
   journal: "arXiv preprint"
+  note: "Accepted to ICCCN 2020."
   year:    "2020"
   url:     "https://arxiv.org/abs/2001.04281"
   pdf:
